[tool.poetry]
name = "rag-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rag_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
pathway = "^0.15.2"
llama-index = "^0.11.20"
litellm = "^1.51.1"
google-generativeai = "^0.5.4"
llama-index-embeddings-gemini = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
