[tool.poetry]
name = "rag-pipeline"
version = "0.1.0"
description = "Idk man"
authors = ["Dikshant Khandelwal <dikkpsd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pathway = "^0.15.2"
llama-index = "^0.11.20"
litellm = "^1.51.1"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
